@@ -1,5 +1,15 @@
 2001-03-13  Hans Petter Jansson  <hpj@ximian.com>
 
+	* xml.pl.in (xst_xml_print_state_tag): Renamed from
+	  xst_xml_print_state. Removed spurious indent.
+	
+	* disks-conf.in (xml_print): Use xst_xml_print_state_tag instead of
+	  direct print..
+
+	* media.pl.in (xst_media_xml_print): Use xst_xml_print_state_tag.
+
+2001-03-13  Hans Petter Jansson  <hpj@ximian.com>
+
 	* xml.pl.in (xst_xml_print_begin): Implement.
 	  (xst_xml_print_end): Implement.
 	  (xst_xml_print_indent): Use xst_xml_print_string.
